fix(core): allow side filters to be collapsed (#4629)

--- a/app/scripts/modules/core/src/presentation/main.less
+++ b/app/scripts/modules/core/src/presentation/main.less
@@ -248,7 +248,7 @@ html {
       width: 390px;
     }
     @media(min-width: 1400px) {
-      width: 540px;
+      width: 530px;
     }
   }
   .nav-content {
